--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -60,12 +60,12 @@
                     <customfonts.MyTextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="3000"
                         android:layout_marginLeft="2dp"
                         android:textColor="#ea5555"
                         android:layout_gravity="center"
                         android:textSize="30dp"
                         android:textStyle="bold"
+                        android:id="@+id/balance"
                         android:gravity="center"/>
 
                 </LinearLayout>
