--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -52,8 +52,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
                 android:background="@drawable/rectangle_background"
@@ -63,7 +61,7 @@
                     android:id="@+id/email1"
                     android:layout_width="match_parent"
                     android:textColorHint="@color/colorhint"
-                    android:layout_marginTop="3dp"
+                    android:layout_marginTop="5dp"
                     android:layout_height="wrap_content"
                     android:textColor="@color/colortext">
 
@@ -72,6 +70,7 @@
                         android:layout_height="match_parent"
                         android:id="@+id/mobile_number"
                         android:paddingLeft="20dp"
+                        android:inputType="number"
                         android:layout_marginTop="3dp"
                         android:singleLine="true"
                         android:imeOptions="actionNext"
@@ -85,14 +84,12 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="0.2"/>
+                android:layout_weight="0.3"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
                 android:background="@drawable/rectangle_background"
@@ -103,7 +100,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColorHint="@color/colorhint"
-                    android:layout_marginTop="3dp"
+                    android:layout_marginTop="5dp"
                     android:textColor="@color/colortext">
 
                     <customfonts.MyEditText
@@ -130,7 +127,7 @@
             <customfonts.MyButton
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1"
+                android:layout_weight="0.8"
                 android:gravity="center"
                 android:textSize="18dp"
                 android:id="@+id/login"
@@ -159,7 +156,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.7"/>
+            android:layout_weight="0.8"/>
 
     </LinearLayout>
 
