Create three accounts with validations by sathish

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -162,7 +162,7 @@
                 android:textAllCaps="false"
                 android:background="@drawable/button_background"
                 android:textColor="#fcfcfc"
-                android:text="Register"/>
+                android:text="Create Account"/>
 
 
         </LinearLayout>
