--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,14 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.7"/>
+            android:layout_weight="0.2"/>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.7"
+            android:id="@+id/account_image"
+            android:src="@drawable/wallet"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -28,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="30dp"
                 android:gravity="center"
-                android:id="@+id/login_text"
+                android:id="@+id/account_text"
                 android:text="Create Account"/>
 
         </LinearLayout>
@@ -51,7 +58,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1"
+                android:layout_weight="1.2"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:layout_marginLeft="15dp"
@@ -63,7 +70,7 @@
                     android:id="@+id/mobileno"
                     android:layout_width="match_parent"
                     android:textColorHint="@color/colorhint"
-                    android:layout_marginTop="3dp"
+                    android:layout_marginTop="5dp"
                     android:layout_height="wrap_content"
                     android:textColor="@color/colortext">
 
@@ -90,7 +97,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1"
+                android:layout_weight="1.2"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:layout_marginLeft="15dp"
@@ -102,7 +109,7 @@
                     android:id="@+id/email1"
                     android:layout_width="match_parent"
                     android:textColorHint="@color/colorhint"
-                    android:layout_marginTop="3dp"
+                    android:layout_marginTop="5dp"
                     android:layout_height="wrap_content"
                     android:textColor="@color/colortext">
 
@@ -129,7 +136,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1"
+                android:layout_weight="1.2"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:layout_marginLeft="15dp"
@@ -142,7 +149,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColorHint="@color/colorhint"
-                    android:layout_marginTop="3dp"
+                    android:layout_marginTop="5dp"
                     android:textColor="@color/colortext">
 
                     <customfonts.MyEditText
@@ -178,7 +185,7 @@
                 android:textAllCaps="false"
                 android:background="@drawable/button_background"
                 android:textColor="#fcfcfc"
-                android:text="Register"/>
+                android:text="Create"/>
 
 
         </LinearLayout>
@@ -186,7 +193,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.5"/>
+            android:layout_weight="0.2"/>
 
     </LinearLayout>
 
