New branch for okhttp

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -115,7 +115,7 @@
                         android:singleLine="true"
                         android:imeOptions="actionNext"
                         android:background="@android:color/transparent"
-                        android:hint="Email"/>
+                        android:hint="Name"/>
 
                 </android.support.design.widget.TextInputLayout>
 
