Add and retrieve profile image by sathish

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
 
     <color name="colortext">#100b20</color>
     <color name="colorhint">#a9aaac</color>
+    <color name="white">#ffffff</color>
 
 </resources>
