--- a/app/src/main/res/layout/content_spend.xml
+++ b/app/src/main/res/layout/content_spend.xml
@@ -1,16 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_intro_screen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".SpendActivity"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:showIn="@layout/activity_spend">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="15dp"
         android:orientation="vertical">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.1"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="@drawable/rectangle_background"
+            android:orientation="vertical"
+            android:layout_weight="1.2">
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.2"/>
+
+            <customfonts.MyTextView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.5"
+                android:text="Wallet Balance"
+                android:textSize="25dp"
+                android:gravity="center"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.1"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:gravity="center"
+                android:layout_height="0dp"
+                android:layout_weight="0.7"
+                android:orientation="horizontal">
+
+                <customfonts.MyTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/Rs"
+                    android:textColor="#ea5555"
+                    android:textSize="30dp"
+                    android:layout_gravity="center"
+                    android:textStyle="bold"
+                    android:gravity="center"/>
+
+                <customfonts.MyTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="2dp"
+                    android:textColor="#ea5555"
+                    android:layout_gravity="center"
+                    android:textSize="30dp"
+                    android:textStyle="bold"
+                    android:id="@+id/balance"
+                    android:gravity="center"/>
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.2"/>
+
+
+        </LinearLayout>
+
 
         <View
             android:layout_width="match_parent"
@@ -29,7 +101,7 @@
                 android:textSize="30dp"
                 android:gravity="center"
                 android:id="@+id/account_text"
-                android:text="Create Account"/>
+                android:text="Create Spend"/>
 
         </LinearLayout>
 
@@ -38,51 +110,64 @@
             android:layout_height="0dp"
             android:layout_weight="0.2"/>
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="100dp"
-            android:layout_gravity="center"
-            android:layout_height="0dp"
-            android:layout_weight="0.9"
-            android:id="@+id/account_image"
-            tools:src="@drawable/profile"/>
-
-        <customfonts.MyTextView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.3"
-            android:textSize="16dp"
-            android:gravity="center"
-            android:id="@+id/edit_image"
-            android:text="Add Image"/>
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="3"
+            android:layout_weight="3.2"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin"
             android:orientation="vertical">
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="0.1"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1.2"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
+                android:layout_weight="1"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
                 android:background="@drawable/rectangle_background"
                 android:orientation="vertical">
 
                 <android.support.design.widget.TextInputLayout
-                    android:id="@+id/mobileno"
+                    android:id="@+id/id1"
+                    android:layout_width="match_parent"
+                    android:textColorHint="@color/colorhint"
+                    android:layout_marginTop="5dp"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colortext">
+
+                    <customfonts.MyEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:id="@+id/unique_id"
+                        android:paddingLeft="20dp"
+                        android:layout_marginTop="3dp"
+                        android:singleLine="true"
+                        android:imeOptions="actionNext"
+                        android:background="@android:color/transparent"
+                        android:hint="Unique ID"/>
+
+                </android.support.design.widget.TextInputLayout>
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.2"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:background="@drawable/rectangle_background"
+                android:orientation="vertical">
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/email1"
                     android:layout_width="match_parent"
                     android:textColorHint="@color/colorhint"
                     android:layout_marginTop="5dp"
@@ -107,60 +192,19 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="0.2"/>
+                android:layout_weight="0.3"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1.2"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
+                android:layout_weight="1"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
                 android:background="@drawable/rectangle_background"
                 android:orientation="vertical">
 
                 <android.support.design.widget.TextInputLayout
-                    android:id="@+id/email1"
-                    android:layout_width="match_parent"
-                    android:textColorHint="@color/colorhint"
-                    android:layout_marginTop="5dp"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/colortext">
-
-                    <customfonts.MyEditText
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:id="@+id/name"
-                        android:paddingLeft="20dp"
-                        android:layout_marginTop="3dp"
-                        android:singleLine="true"
-                        android:imeOptions="actionNext"
-                        android:background="@android:color/transparent"
-                        android:hint="Name"/>
-
-                </android.support.design.widget.TextInputLayout>
-
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="0.2"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1.2"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                android:background="@drawable/rectangle_background"
-                android:orientation="vertical">
-
-                <android.support.design.widget.TextInputLayout
-                    android:id="@+id/password1"
+                    android:id="@+id/amount1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColorHint="@color/colorhint"
@@ -170,14 +214,14 @@
                     <customfonts.MyEditText
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:id="@+id/password"
+                        android:id="@+id/amount"
                         android:layout_marginTop="3dp"
                         android:drawablePadding="20dp"
                         android:paddingLeft="20dp"
                         android:singleLine="true"
                         android:imeOptions="actionDone"
                         android:background="@android:color/transparent"
-                        android:hint="Password"/>
+                        android:hint="Amount"/>
 
                 </android.support.design.widget.TextInputLayout>
 
@@ -186,29 +230,28 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="0.6"/>
+                android:layout_weight="0.5"/>
 
             <customfonts.MyButton
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1"
+                android:layout_weight="0.8"
                 android:gravity="center"
                 android:textSize="18dp"
-                android:id="@+id/register"
+                android:id="@+id/recharge"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
                 android:textAllCaps="false"
                 android:background="@drawable/button_background"
                 android:textColor="#fcfcfc"
-                android:text="Create"/>
-
+                android:text="Spend"/>
 
         </LinearLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.2"/>
+            android:layout_weight="0.3"/>
 
     </LinearLayout>
 
