--- a/app/src/main/res/layout/activity_accout_selection.xml
+++ b/app/src/main/res/layout/activity_accout_selection.xml
@@ -4,12 +4,19 @@
     android:id="@+id/activity_accout_selection"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/splash_bg"
     android:orientation="vertical"
     tools:context="tech42.sathish.paymentwallet.AccoutSelectionActivity">
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:orientation="vertical">
 
     <customfonts.MyTextView
         android:layout_width="match_parent"
@@ -95,4 +102,5 @@
 
         </LinearLayout>
 
+</LinearLayout>
 </LinearLayout>
