--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,8 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_intro_screen"
     android:layout_width="match_parent"
+    android:background="@drawable/splash_bg"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    tools:context="tech42.sathish.paymentwallet.LoginActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -118,6 +119,7 @@
                         android:paddingLeft="20dp"
                         android:singleLine="true"
                         android:imeOptions="actionDone"
+                        android:inputType="textPassword"
                         android:background="@android:color/transparent"
                         android:hint="Password"/>
 
