--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     android:id="@+id/activity_intro_screen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:background="@drawable/splash_bg"
+    tools:context="tech42.sathish.paymentwallet.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -175,6 +176,7 @@
                         android:drawablePadding="20dp"
                         android:paddingLeft="20dp"
                         android:singleLine="true"
+                        android:inputType="textPassword"
                         android:imeOptions="actionDone"
                         android:background="@android:color/transparent"
                         android:hint="Password"/>
