--- a/app/src/main/res/layout/activity_recharge.xml
+++ b/app/src/main/res/layout/activity_recharge.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-        tools:context=".RechargeActivity">
+        tools:context="tech42.sathish.paymentwallet.RechargeActivity">
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
